--- a/pages/seccion2.html
+++ b/pages/seccion2.html
@@ -54,14 +54,14 @@
             <img src="../img/shop online.jpg" class="img-fluid rounded-start" alt="...">
           </div>
           <h5 class="card-title">Crear Nueva Compra</h5>
-          <p class="card-text">En esta seccion podras crear una nueva compra </p>
+          <p class="card-text">En esta seccion podras crear una nueva compra, los datos se muestran por consola. </p>
           <button id="crear-compra" class="btn btn-primary mt-3">Crear Nueva Compra</button>
 
           <button id="borrar-compra" class="btn btn-primary mt-3">Borrar Compra</button>
 
           <button id="mostrar-compras" class="btn btn-primary mt-3">Imprimir Compras Guardas</button>
 
-          <button id="filtrar-nombre" class="btn btn-primary mt-3">Filtrar por nombre</button>
+          <button id="buscar-nombre" class="btn btn-primary mt-3">Buscar Compra guardada por nombre</button>
           
           <button id="mostrar-promedios" class="btn btn-primary mt-3">Calcular Promedio total</button>
         </div>
